[package]
name = "bpe-example"
version = "0.1.0"
edition = "2018"

[dependencies]
ureq = "2.1.1"
dirs = "3.0.2"
anyhow = "1.0.42"
protobuf = "2.24.1"
itertools = "0.10.1"

[build-dependencies]
protobuf-codegen-pure= { version = "2.24.1", optional = true }

[features]
proto-compile = ["protobuf-codegen-pure"]